[package]
name = "ping-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kameo = { version = "0.19", features = ["remote"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libp2p = "0.56"
clap = { version = "4", features = ["derive"] } 
futures = "0.3"